welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: type mismatch;
 found   : String("4")
 required: Int
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)&&(c>=13 && c<=19)&&(d>=13 && d<=19)){return "4"}
                                                                                           ^countTeen:3: error: type mismatch;
 found   : String("3")
 required: Int
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)&&(c>=13 && c<=19)||(d>=13 && d<=19)){return "3"}
                                                                                           ^countTeen:4: error: type mismatch;
 found   : String("3")
 required: Int
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)||(c>=13 && c<=19)&&(d>=13 && d<=19)){return "3"}
                                                                                           ^countTeen:5: error: type mismatch;
 found   : String("3")
 required: Int
	if ((a>=13 && a<=19)||(b>=13 && b<=19)&&(c>=13 && c<=19)&&(d>=13 && d<=19)){return "3"}
                                                                                           ^countTeen:6: error: type mismatch;
 found   : String("2")
 required: Int
	if ((a>=13 && a<=19)&&(b>=13 && b<=19)||(c>=13 && c<=19)||(d>=13 && d<=19)){return "2"}
                                                                                           ^countTeen:7: error: type mismatch;
 found   : String("2")
 required: Int
	if ((a>=13 && a<=19)||(b>=13 && b<=19)||(c>=13 && c<=19)&&(d>=13 && d<=19)){return "2"}
                                                                                           ^countTeen:8: error: type mismatch;
 found   : String("2")
 required: Int
	if ((a>=13 && a<=19)||(b>=13 && b<=19)&&(c>=13 && c<=19)||(d>=13 && d<=19)){return "2"}
                                                                                           ^countTeen:9: error: type mismatch;
 found   : String("1")
 required: Int
	if ((a>=13 && a<=19)||(b>=13 && b<=19)||(c>=13 && c<=19)||(d>=13 && d<=19)){return "1"}
                                                                                           ^countTeen:9: error: type mismatch;
 found   : Unit
 required: Int
	if ((a>=13 && a<=19)||(b>=13 && b<=19)||(c>=13 && c<=19)||(d>=13 && d<=19)){return "1"}
        ^